--- a/curves.ipynb
+++ b/curves.ipynb
@@ -16,21 +16,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "import cv2\n",
     "import numpy as np\n",
     "import math\n",
+    "from math import ceil\n",
     "import rosbag\n",
+    "import rospy\n",
     "from sensor_msgs.msg import Image\n",
     "from cv_bridge import CvBridge, CvBridgeError"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,14 +46,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1064\n"
+      "(480, 640, 3)\n"
      ]
     }
    ],
@@ -59,8 +61,8 @@
     "## Get image shape , rows, columns and channels \n",
     "shape = segmented_images_cv2[0].shape\n",
     "height = shape[0]\n",
-    "width = shape[1]\n",
-    "print(len(segmented_images_cv2))"
+    "width = shape[1]-1\n",
+    "print(shape)"
    ]
   },
   {
@@ -69,7 +71,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "horizon = int(height * 0.6)"
+    "horizon = int(height * 0.4)\n"
    ]
   },
   {
@@ -78,8 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def is_red_pixel(image, x, y):\n",
-    "    return int(image[y, x, 2] == 255 and image[y, x, 0] == 0 and image[y, x, 1] == 0)"
+    "trajectory_pixels = [10711,12315,13894,9520,13894,12315,10711]"
    ]
   },
   {
@@ -88,36 +89,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def is_red_pixel(image, x, y):\n",
+    "    if image[y, x, 2] == 255 and image[y, x, 0] == 0 and image[y, x, 1] == 0:\n",
+    "        return 1\n",
+    "    return 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def center_trajectories(image, r, visualize=True):\n",
     "    red_pixel_count = 0\n",
-    "    for y in range(height - 1, horizon +1 , -1):\n",
-    "        xL = int((width/2 -r))\n",
-    "        xR = int((width/2 +r))\n",
+    "    for y in range(height-50, horizon , -1):\n",
+    "        xL = int((ceil(width/2.) -r))\n",
+    "        xR = int((ceil(width/2.) +r))\n",
     "        for x in range(xL,xR):\n",
     "            red_pixel_count += is_red_pixel(image, x, y)\n",
     "            if visualize and int(image[y, x, 2] == 255 and image[y, x, 0] == 0 and image[y, x, 1] == 0):\n",
     "                image[y,x] = (255,255,255)\n",
     "            elif int(image[y, x, 2] == 0 and image[y, x, 0] == 0 and image[y, x, 1] == 255):\n",
-    "                return\n",
+    "                return red_pixel_count\n",
     "    return red_pixel_count"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Right Trajectories\n",
     "def right_trajectories(image, R, r, LTolerance, visualize=True):\n",
     "    red_pixel_count = 0\n",
-    "    for y in range(height - 1, horizon +1 , -1):\n",
+    "    for y in range(height - 50, horizon , -1):\n",
     "        xL = width\n",
     "        xR = width\n",
     "        if (R+r) * (R+r)-(y-height)*(y-height) >= 0 :\n",
-    "            xL = int((width/2+(R-r))-math.sqrt((R+r)*(R+r)-(y-height)*(y-height)))\n",
+    "            xL = int((ceil(width/2.)+(R-r))-math.sqrt((R+r)*(R+r)-(y-height)*(y-height)))\n",
     "        if (R-r) * (R-r)-(y-height)*(y-height) >= 0:\n",
-    "            xR = int((width/2+(R+r))-math.sqrt((R-r)*(R-r)-(y-height)*(y-height)))\n",
+    "            xR = int((ceil(width/2.)+(R+r))-math.sqrt((R-r)*(R-r)-(y-height)*(y-height)))\n",
     "        xL = max( min(xL,width), 0 )\n",
     "        xR = max( min(xR,width), 0 )\n",
     "        x_count = 0\n",
@@ -126,9 +139,9 @@
     "            if visualize and int(image[y, x, 2] == 255 and image[y, x, 0] == 0 and image[y, x, 1] == 0):\n",
     "                image[y,x] = (255,255,255)\n",
     "            elif int(image[y, x, 2] == 0 and image[y, x, 0] == 0 and image[y, x, 1] == 255):\n",
-    "                if (x_count < LTolerance):\n",
-    "                    return\n",
-    "                else:\n",
+    "                 if (x_count < LTolerance):\n",
+    "                    return red_pixel_count\n",
+    "                 else:\n",
     "                    break\n",
     "            x_count += 1\n",
     "    return red_pixel_count"
@@ -136,32 +149,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Left Trajectories\n",
     "def left_trajectories(image, R, r, LTolerance, visualize=True):\n",
     "    red_pixel_count = 0\n",
-    "    #image_copy = image.copy()\n",
-    "    for y in range(height - 1, horizon +1 , -1):\n",
+    "    for y in range(height - 50, horizon , -1):\n",
     "        xL = 0\n",
     "        xR = 0\n",
     "        if (R-r)*(R-r)-(y-height)*(y-height) >= 0 :\n",
-    "            xL = int((width/2-(R+r))+math.sqrt((R-r)*(R-r)-(y-height)*(y-height)))\n",
+    "            xL = int((ceil(width/2.)-(R+r))+math.sqrt((R-r)*(R-r)-(y-height)*(y-height)))\n",
     "        if (R+r)*(R+r)-(y-height)*(y-height) >= 0:\n",
-    "            xR = int((width/2-(R-r))+math.sqrt((R+r)*(R+r)-(y-height)*(y-height)))\n",
+    "            xR = int((ceil(width/2.)-(R-r))+math.sqrt((R+r)*(R+r)-(y-height)*(y-height)))\n",
     "        xL = max(min(xL,width),0)\n",
     "        xR = max(min(xR,width),0)\n",
     "        x_count = 0\n",
-    "        for x in range(xR - 1, xL, -1):\n",
+    "        for x in range(xR - 1, xL-1, -1):\n",
     "            red_pixel_count += is_red_pixel(image, x, y)\n",
     "            if visualize and int(image[y, x, 2] == 255 and image[y, x, 0] == 0 and image[y, x, 1] == 0):\n",
     "                image[y,x] = (255,255,255)\n",
     "            elif int(image[y, x, 2] == 0 and image[y, x, 0] == 0 and image[y, x, 1] == 255):\n",
-    "                if (x_count < LTolerance):\n",
-    "                    return\n",
-    "                else:\n",
+    "                 if (x_count < LTolerance):\n",
+    "                    return red_pixel_count\n",
+    "                 else:\n",
     "                    break\n",
     "            x_count += 1\n",
     "    return red_pixel_count"
@@ -169,45 +181,160 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6398\n",
-      "7005\n",
-      "6135\n"
+      "[10104, 12035, 13152, 9228, 11326, 11032, 10141]\n",
+      "[0.94332929 0.9772635  0.94659565 0.96932773 0.81517202 0.89581811\n",
+      " 0.94678368]\n"
      ]
     }
    ],
    "source": [
-    "print left_trajectories(blank_image,200, 10, 10, False)\n",
-    "print center_trajectories(blank_image,20, 10, False)\n",
-    "print right_trajectories(blank_image,200, 10, 10, False)"
+    "image = segmented_images_cv2[0].copy()\n",
+    "image = image[:,:-1,:]\n",
+    "results = []\n",
+    "results.append(left_trajectories(image,100, 10, 10,False))\n",
+    "results.append(left_trajectories(image,150, 10, 10,False))\n",
+    "results.append(left_trajectories(image,200, 10, 10,False))\n",
+    "results.append(center_trajectories(image,20,False))\n",
+    "results.append(right_trajectories(image,200, 10, 10,False))\n",
+    "results.append(right_trajectories(image,150, 10, 10,False))\n",
+    "results.append(right_trajectories(image,100, 10, 10,False))\n",
+    "print results\n",
+    "results = np.array(results,dtype=float)/np.array(trajectory_pixels,dtype=float)\n",
+    "print results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def softmax(x):\n",
+    "    \"\"\"Compute softmax values for each sets of scores in x.\"\"\"\n",
+    "    return np.exp(x) / np.sum(np.exp(x), axis=0)\n",
+    "\n",
+    "s = softmax(results)\n",
+    "np.sum(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "left_trajectories(segmented_images_cv2[100],100, 10, 10)\n",
-    "left_trajectories(segmented_images_cv2[100],150, 10, 10)\n",
-    "left_trajectories(segmented_images_cv2[100],200, 10, 10)\n",
-    "center_trajectories(segmented_images_cv2[100],20)\n",
-    "right_trajectories(segmented_images_cv2[100],200, 10, 10)\n",
-    "right_trajectories(segmented_images_cv2[100],150, 10, 10)\n",
-    "right_trajectories(segmented_images_cv2[100],100, 10, 10)"
+    "STEERING_RATIOS = [-1.0, -0.6, -0.3, 0, 0.3, 0.6, 1.0]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.08483993322932404"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.dot(results, STEERING_RATIOS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ROSInitException",
+     "evalue": "time is not initialized. Have you called init_node()?",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mROSInitException\u001b[0m                          Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-37-3ddad0349a06>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnow_nsecs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrospy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_rostime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnsecs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mrospy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloginfo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Current time %i\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnow_nsecs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/ros/kinetic/lib/python2.7/dist-packages/rospy/rostime.pyc\u001b[0m in \u001b[0;36mget_rostime\u001b[0;34m()\u001b[0m\n\u001b[1;32m    188\u001b[0m     \"\"\"\n\u001b[1;32m    189\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0m_rostime_initialized\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 190\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mrospy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexceptions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mROSInitException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"time is not initialized. Have you called init_node()?\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    191\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0m_rostime_current\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    192\u001b[0m         \u001b[0;31m# initialize with sim time\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mROSInitException\u001b[0m: time is not initialized. Have you called init_node()?"
+     ]
+    }
+   ],
+   "source": [
+    "now_nsecs = rospy.get_rostime().nsecs\n",
+    "rospy.loginfo(\"Current time %i\", now_nsecs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8678"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "image = segmented_images_cv2[0].copy()\n",
+    "image = image[:,:-1,:]\n",
+    "left_trajectories(image,100, 10, 10)\n",
+    "left_trajectories(image,150, 10, 10)\n",
+    "left_trajectories(image,200, 10, 10)\n",
+    "center_trajectories(image,20)\n",
+    "right_trajectories(image,200, 10, 10)\n",
+    "right_trajectories(image,150, 10, 10)\n",
+    "right_trajectories(image,100, 10, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-21-26a0fc5e9bb7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mleft_trajectories\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage_copy\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mleft_trajectories\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage_copy\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m150\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0mleft_trajectories\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage_copy\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m200\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0mcenter_trajectories\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage_copy\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0mright_trajectories\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage_copy\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m200\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-20-81980a6ae1a1>\u001b[0m in \u001b[0;36mleft_trajectories\u001b[0;34m(image, R, r, LTolerance, visualize)\u001b[0m\n\u001b[1;32m     13\u001b[0m         \u001b[0mx_count\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mxR\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mxL\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m             \u001b[0mred_pixel_count\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mis_red_pixel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mvisualize\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m255\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mimage\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mimage\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m                 \u001b[0mimage\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m255\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m255\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m255\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-17-77c57b22e647>\u001b[0m in \u001b[0;36mis_red_pixel\u001b[0;34m(image, x, y)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mis_red_pixel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m255\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mimage\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mimage\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "for idx, image in enumerate(segmented_images_cv2):\n",
     "    image_copy = image.copy()\n",
@@ -218,18 +345,18 @@
     "    right_trajectories(image_copy,200, 10, 10)\n",
     "    right_trajectories(image_copy,150, 10, 10)\n",
     "    right_trajectories(image_copy,100, 10, 10)\n",
-    "    cv2.imwrite('traject/{}_traject.jpg'.format(idx), image_copy)"
+    "    cv2.imwrite('traject_thunderhill/{}_traject.jpg'.format(idx), image_copy)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# cv2.imshow('image',segmented_images_cv2[100])\n",
-    "# cv2.waitKey(0)\n",
-    "# cv2.destroyAllWindows()"
+    "cv2.imshow('image',image)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
    ]
   },
   {
